@@ -1,72 +1,102 @@
 package com.platform.controlplane.policy;
 
+import com.platform.controlplane.persistence.EntityMappers;
+import com.platform.controlplane.persistence.entity.PolicyEntity;
+import com.platform.controlplane.persistence.repository.PolicyJpaRepository;
 import org.springframework.stereotype.Component;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 /**
- * In-memory repository for policies.
- * Can be extended to use database storage in the future.
+ * Repository for policies.
+ * Delegates to JPA repository for persistent storage.
  */
 @Component
 public class PolicyRepository {
     
-    private final Map<String, Policy> policies = new ConcurrentHashMap<>();
+    private final PolicyJpaRepository jpaRepository;
+    private final EntityMappers entityMappers;
+    
+    public PolicyRepository(PolicyJpaRepository jpaRepository, EntityMappers entityMappers) {
+        this.jpaRepository = jpaRepository;
+        this.entityMappers = entityMappers;
+    }
     
     /**
      * Save a policy.
      */
     public Policy save(Policy policy) {
-        policies.put(policy.getId(), policy);
-        return policy;
+        PolicyEntity entity = entityMappers.toEntity(policy);
+        entity = jpaRepository.save(entity);
+        return entityMappers.toDomain(entity);
     }
     
     /**
      * Find policy by ID.
      */
     public Optional<Policy> findById(String id) {
-        return Optional.ofNullable(policies.get(id));
+        return jpaRepository.findById(id)
+            .map(entityMappers::toDomain);
+    }
+    
+    /**
+     * Find policy by name.
+     */
+    public Optional<Policy> findByName(String name) {
+        return jpaRepository.findByName(name)
+            .map(entityMappers::toDomain);
     }
     
     /**
      * Find all policies.
      */
     public List<Policy> findAll() {
-        return new ArrayList<>(policies.values());
+        return jpaRepository.findAll().stream()
+            .map(entityMappers::toDomain)
+            .toList();
     }
     
     /**
      * Find policies that apply to a specific system type.
      */
     public List<Policy> findBySystemType(String systemType) {
-        return policies.values().stream()
-            .filter(policy -> policy.appliesTo(systemType))
-            .collect(Collectors.toList());
+        return jpaRepository.findBySystemTypeOrWildcard(systemType).stream()
+            .map(entityMappers::toDomain)
+            .toList();
+    }
+    
+    /**
+     * Find enabled policies for a system type.
+     */
+    public List<Policy> findEnabledBySystemType(String systemType) {
+        return jpaRepository.findEnabledBySystemType(systemType).stream()
+            .map(entityMappers::toDomain)
+            .toList();
     }
     
     /**
      * Delete policy by ID.
      */
     public boolean deleteById(String id) {
-        return policies.remove(id) != null;
+        if (jpaRepository.existsById(id)) {
+            jpaRepository.deleteById(id);
+            return true;
+        }
+        return false;
     }
     
     /**
      * Check if policy exists.
      */
     public boolean existsById(String id) {
-        return policies.containsKey(id);
+        return jpaRepository.existsById(id);
     }
     
     /**
      * Count total policies.
      */
     public long count() {
-        return policies.size();
+        return jpaRepository.count();
     }
 }
